; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-tq.c_timeout_queue_remove.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-tq.c_timeout_queue_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeout_queue = type { i32 }
%struct.lwan_connection = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.timeout_queue*, %struct.lwan_connection*)* @timeout_queue_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timeout_queue_remove(%struct.timeout_queue* %0, %struct.lwan_connection* %1) #0 {
  %3 = alloca %struct.timeout_queue*, align 8
  %4 = alloca %struct.lwan_connection*, align 8
  %5 = alloca %struct.lwan_connection*, align 8
  %6 = alloca %struct.lwan_connection*, align 8
  store %struct.timeout_queue* %0, %struct.timeout_queue** %3, align 8
  store %struct.lwan_connection* %1, %struct.lwan_connection** %4, align 8
  %7 = load %struct.timeout_queue*, %struct.timeout_queue** %3, align 8
  %8 = load %struct.lwan_connection*, %struct.lwan_connection** %4, align 8
  %9 = getelementptr inbounds %struct.lwan_connection, %struct.lwan_connection* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.lwan_connection* @timeout_queue_idx_to_node(%struct.timeout_queue* %7, i32 %10)
  store %struct.lwan_connection* %11, %struct.lwan_connection** %5, align 8
  %12 = load %struct.timeout_queue*, %struct.timeout_queue** %3, align 8
  %13 = load %struct.lwan_connection*, %struct.lwan_connection** %4, align 8
  %14 = getelementptr inbounds %struct.lwan_connection, %struct.lwan_connection* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call %struct.lwan_connection* @timeout_queue_idx_to_node(%struct.timeout_queue* %12, i32 %15)
  store %struct.lwan_connection* %16, %struct.lwan_connection** %6, align 8
  %17 = load %struct.lwan_connection*, %struct.lwan_connection** %4, align 8
  %18 = getelementptr inbounds %struct.lwan_connection, %struct.lwan_connection* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.lwan_connection*, %struct.lwan_connection** %6, align 8
  %21 = getelementptr inbounds %struct.lwan_connection, %struct.lwan_connection* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  %22 = load %struct.lwan_connection*, %struct.lwan_connection** %4, align 8
  %23 = getelementptr inbounds %struct.lwan_connection, %struct.lwan_connection* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.lwan_connection*, %struct.lwan_connection** %5, align 8
  %26 = getelementptr inbounds %struct.lwan_connection, %struct.lwan_connection* %25, i32 0, i32 1
  store i32 %24, i32* %26, align 4
  %27 = load %struct.lwan_connection*, %struct.lwan_connection** %4, align 8
  %28 = getelementptr inbounds %struct.lwan_connection, %struct.lwan_connection* %27, i32 0, i32 0
  store i32 -1, i32* %28, align 4
  %29 = load %struct.lwan_connection*, %struct.lwan_connection** %4, align 8
  %30 = getelementptr inbounds %struct.lwan_connection, %struct.lwan_connection* %29, i32 0, i32 1
  store i32 -1, i32* %30, align 4
  ret void
}

declare dso_local %struct.lwan_connection* @timeout_queue_idx_to_node(%struct.timeout_queue*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
